# graphreadability

./: .pre-commit-config.yaml  404.html  LICENSE.txt  README.md  REFERENCES.txt  _version.py  environment.yml  graphreadability.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.py
.github/workflows/: mkdocs.yml  publish-pypi.yml  python-package-conda.yml
contributing/: index.html
docs/: contributing.md  index.md  metrics.md  metricssuite.md  references.md
graphreadability/: __init__.py
graphreadability/core/: __init__.py  analyzer.py  metricssuite.py  readabilitygraph.py
graphreadability/io/: __init__.py  cytoscape_api.py  graphml_reader.py
graphreadability/layout/: layout_algorithms.py
graphreadability/metrics/: advanced_metrics.py  crosses_promotion.py  metric_helpers.py  metrics.py  metrics_suite.py  parse_graph.py
graphreadability/tests/: __init__.py  test_graph.py  test_graphreadability.py  test_helpers.py  test_metricssuite.py  test_readabilitygraph.py
graphreadability/tests/test_data/: cube.graphml  pretty_print_output.txt  squares.graphml  star.graphml
graphreadability/utils/: crosses_promotion.py  digitize_graphs.py  helpers.py
graphs/: Dunne_2015_1_a.graphml  Dunne_2015_1_b.graphml  Dunne_2015_1_c.graphml  Dunne_2015_1_d.graphml  cube.graphml  squares.graphml
graphvizrm/: __init__.py
graphvizrm/core/: __init__.py  graph.py
graphvizrm/io/: __init__.py  gefx_reader.py
graphvizrm/layout/: __init__.py
graphvizrm/metrics/: basic_metrics.py
graphvizrm/tests/: __init__.py  test_advanced_metrics.py  test_basic_metrics.py  test_graph.py
graphvizrm/utils/: __init__.py
metrics/: index.html
metricssuite/: index.html
notebooks/: test_metrics.ipynb  tests.ipynb
references/: index.html
search/: search_index.json
src/: __init__.py
src/core/: __init__.py  metricssuite.py  readabilitygraph.py
src/layout/: layout_algorithms.py
src/metrics/: __init__.py  metrics.py
src/tests/: test_graphreadability.py  test_helpers.py  test_metric_helpers.py  test_metricssuite.py
src/tests/test_data/: squares.graphml
src/utils/: __init__.py  helpers.py
