[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "graphreadability"
dynamic = ["version"]
description = "A Python module for applying readability metrics graph and network visualizations."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.7"
authors = [
    { name = "Philip Mathieu", email = "mathieu.p@northeastern.edu" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "networkx",
    "numpy",
    "matplotlib",
    "scipy"
]

[project.optional-dependencies]
tests = [
    "pandas"
]

[project.urls]
Homepage = "https://github.com/PhilipMathieu/graphreadability"

[tool.hatch.version]
path = "src/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "src",
]

[tool.hatch.build.targets.wheel]
include = [
    "src",
]
