[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "graphreadability"
dynamic = ["version"]
description = "A Python module for applying readability metrics graph and network visualizations."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.7"
authors = [
    { name = "Philip Mathieu", email = "mathieu.p@northeastern.edu" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "networkx",
    "numpy",
    "matplotlib",
    "scipy"
]

[project.optional-dependencies]
tests = [
    "pandas"
]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings",
    "mkdocstrings-python",
]

[project.urls]
Homepage = "https://github.com/PhilipMathieu/graphreadability"

[tool.hatch.version]
source = "vcs"
tag-pattern = "^(?:[\\w-]+-)?(?P<version>[vV]?\\d+(?:.\\d+){0,2})"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[tool.hatch.build.targets.sdist]
include = [
    "graphreadability",
]

[tool.hatch.build.targets.wheel]
include = [
    "graphreadability",
]

[tool.hatch.build.hooks.vcs]
version-file = "_version.py"
